all features working

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
