--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 **/node_modules
-**.env# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+**.env
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
